--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "description": "Mesa de Arena Interactiva de Realidad Aumentada",
     "main": "indexP.js",
     "scripts": {
-        "start": "http-server -p 8080 -c-1 --index index.html",
-        "start-py": "python3 server/server.py",
-        "start-js": "node server/node.js",
-        "dev": "concurrently \"npm run start-py\" \"npm run start-js\" \"npm start\"",
-        "test": "jest",
-        "test:watch": "jest --watch"
-    },
+    "start": "http-server -p 8080 -c-1 --index index.html",
+    "start-py": "python3 server/server.py",
+    "start-js": "node server/node.js",
+    "start-gestos": "python3 /Users/mac/Documents/GitHub/MAIRA_git/Server/detectorGestos.py",
+    "dev": "concurrently \"npm run start-py\" \"npm run start-js\" \"npm start\"",
+    "install-gesture-deps": "python3 server/install_deps.py"
+},
     "dependencies": {
         "@mapbox/corslite": "^0.0.7",
         "@raruto/leaflet-elevation": "^2.5.1",
