--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start-js": "node server/node.js",
     "start-gestos": "python3 /Users/mac/Documents/GitHub/MAIRA_git/Server/detectorGestos.py",
     "dev": "concurrently \"npm run start-py\" \"npm run start-js\" \"npm start\"",
-    "install-gesture-deps": "python3 server/install_deps.py"
+    "install-gesture-deps": "python3 server/install_deps.py",
+    "start-py-https": "python3 server/serverhttps.py",
+    "dev-https": "concurrently \"npm run start-py-https\" \"npm run start-js\""
+
 },
     "dependencies": {
         "@mapbox/corslite": "^0.0.7",
