--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
     "description": "Mesa de Arena Interactiva de Realidad Aumentada",
     "main": "indexP.js",
     "scripts": {
-    "start": "http-server -p 8080 -c-1 --index index.html",
-    "start-py": "python3 server/server.py",
-    "start-js": "node server/node.js",
-    "start-gestos": "python3 /Users/mac/Documents/GitHub/MAIRA_git/Server/detectorGestos.py",
-    "dev": "concurrently \"npm run start-py\" \"npm run start-js\" \"npm start\"",
-    "install-gesture-deps": "python3 server/install_deps.py",
-    "start-py-https": "python3 server/serverhttps.py",
-    "dev-https": "concurrently \"npm run start-py-https\" \"npm run start-js\""
-
-},
+        "start": "http-server -p 8080 -c-1 --index index.html",
+        "start-py": "python3 server/server.py",
+        "start-js": "node server/node.js",
+        "start-gestos": "python3 /Users/mac/Documents/GitHub/MAIRA_git/Server/detectorGestos.py",
+        "dev": "concurrently \"npm run start-py\" \"npm run start-js\" \"npm start\"",
+        "install-gesture-deps": "python3 server/install_deps.py",
+        "start-py-https": "python3 server/serverhttps.py",
+        "dev-https": "concurrently \"npm run start-py-https\" \"npm run start-js\"",
+        "build:production": "npm run optimize:assets && npm run prepare:client",
+        "optimize:assets": "echo 'Optimizing assets for production...'",
+        "prepare:client": "echo 'Preparing client files for static hosting...'"
+    },
     "dependencies": {
         "@mapbox/corslite": "^0.0.7",
         "@raruto/leaflet-elevation": "^2.5.1",
