--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
+# Dependencias principales del servidor para Render + MySQL
+flask==3.0.3
+flask-socketio==5.4.1
+flask-cors==3.0.10
+python-socketio==5.11.4
+python-engineio==4.9.1
+pymysql==1.0.2
+python-dotenv==1.0.1
+bcrypt==4.2.0
+eventlet==0.33.3
+gunicorn==21.2.0
+
+# Dependencias existentes del proyecto
 affine==2.4.0
 attrs==24.2.0
-bcrypt==4.2.0
 bidict==0.23.1
 blinker==1.8.2
 certifi==2024.8.30
@@ -8,9 +20,6 @@ click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
 dnspython==2.6.1
-Flask==3.0.3
-Flask-Cors==3.0.10
-Flask-SocketIO==5.4.1
 Flask-SQLAlchemy==2.5.1
 geopandas==1.0.1
 greenlet==3.0.3
@@ -29,9 +38,6 @@ pyparsing==3.1.4
 pyproj==3.6.1
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
-python-dotenv==1.0.1
-python-engineio==4.9.1
-python-socketio==5.11.4
 pytz==2024.2
 rasterio==1.4.0
 shapely==2.0.6
@@ -42,4 +48,3 @@ typing_extensions==4.12.2
 tzdata==2024.2
 Werkzeug==3.0.4
 wsproto==1.2.0
-pymysql==1.0.2
