--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Dependencias principales del servidor para Render + MySQL
+# Dependencias principales para MAIRA
 flask==3.0.3
 flask-socketio==5.4.1
 flask-cors==3.0.10
@@ -7,44 +7,17 @@ python-engineio==4.9.1
 pymysql==1.0.2
 python-dotenv==1.0.1
 bcrypt==4.2.0
-eventlet==0.33.3
 gunicorn==21.2.0
 
-# Dependencias existentes del proyecto
-affine==2.4.0
-attrs==24.2.0
-bidict==0.23.1
-blinker==1.8.2
-certifi==2024.8.30
+# Dependencias core (reducidas)
+flask-sqlalchemy==2.5.1
+werkzeug==3.0.4
+jinja2==3.1.4
 click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
-dnspython==2.6.1
-Flask-SQLAlchemy==2.5.1
-geopandas==1.0.1
-greenlet==3.0.3
-h11==0.14.0
 itsdangerous==2.2.0
-Jinja2==3.1.4
-lxml==5.2.2
-MarkupSafe==2.1.5
-mysql-connector-python==9.0.0
-numpy==2.1.1
-packaging==24.1
-pandas==2.2.3
-pymongo==4.9.1
-pyogrio==0.9.0
-pyparsing==3.1.4
-pyproj==3.6.1
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-pytz==2024.2
-rasterio==1.4.0
-shapely==2.0.6
+markupsafe==2.1.5
+blinker==1.8.2
+bidict==0.23.1
 simple-websocket==1.0.0
-six==1.16.0
-SQLAlchemy==2.0.32
-typing_extensions==4.12.2
-tzdata==2024.2
-Werkzeug==3.0.4
 wsproto==1.2.0
+h11==0.14.0
