--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ flask-cors==3.0.10
 python-socketio==5.11.4
 python-engineio==4.9.1
 pymysql==1.0.2
+psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 bcrypt==4.2.0
 gunicorn==21.2.0
