🧹 LIMPIEZA COMPLETA: Archivos grandes eliminados del historial
❌ ARCHIVOS GRANDES REMOVIDOS:
- free_storage_prep/altimetria_tiles.tar.gz (199MB)
- free_storage_prep/vegetacion_part_aa.tar.gz (1.08GB)
- Todos los archivos del directorio free_storage_prep/

✅ GITIGNORE ACTUALIZADO:
- Bloquea archivos .tar.gz grandes
- Bloquea archivos .tif extraídos
- Bloquea directorios temporales
- Previene futuros problemas de tamaño

🎯 RESULTADO:
- Repositorio limpio sin archivos > 100MB
- Push funcionará correctamente
- Sistema de mini-tiles listo para implementar

💡 PRÓXIMO: Usar crear_mini_tiles.py para generar archivos pequeños

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 node_modules
 .venv/
 ./Libs/datos_argentina/
+
+# Archivos grandes y temporales
+free_storage_prep/
+**/altimetria_tiles.tar.gz
+**/vegetacion_part_*.tar.gz
+*.tar.gz.tmp
+temp_tif_extract/
+mini_tiles_temp/
+
+# Archivos TIF extraídos (muy grandes)
+**/*.tif
+**/extracted_tiles/
+
+# Logs y archivos temporales
+*.log
+.DS_Store
