--- a/.gitignore
+++ b/.gitignore
@@ -30,11 +30,12 @@ env/
 venv/
 ENV/
 
-# Node.js
+# Dependencias de Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
-package-lock.json
+yarn-error.log*
+# package-lock.json se incluye para garantizar versiones exactas
 
 # Archivos temporales del sistema
 .DS_Store
