🔧 SOLUCIÓN CDN: Migración a librerías locales
✅ Reemplazadas CDNs críticas con node_modules:
- milsymbol: unpkg → /node_modules/milsymbol/
- leaflet-control-geocoder: unpkg → /node_modules/leaflet-control-geocoder/
- leaflet: unpkg → /node_modules/leaflet/
- leaflet-draw: cdnjs → /node_modules/leaflet-draw/
- leaflet-fullscreen: unpkg → /node_modules/leaflet-fullscreen/
- leaflet-sidebar-v2: unpkg → /node_modules/leaflet-sidebar-v2/
- leaflet-measure: unpkg → /node_modules/leaflet-measure/
- leaflet-easybutton: unpkg → /node_modules/leaflet-easybutton/
- d3: d3js.org → /node_modules/d3/
- geotiff, html2canvas, file-saver, proj4, mgrs

📦 Modificado .gitignore para incluir librerías críticas
🚀 Garantiza funcionamiento en producción sin dependencia de CDNs externos

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "html2canvas": "^1.4.1",
         "http": "^0.0.1-security",
         "http-server": "^14.1.1",
+        "jspdf": "^2.5.1",
+        "leaflet": "^1.9.4",
         "leaflet-bing-layer": "^3.3.1",
         "leaflet-control-geocoder": "^2.4.0",
         "leaflet-draw": "^1.0.4",
@@ -45,9 +47,11 @@
         "leaflet-utfgrid": "^0.3.0",
         "leaflet.gridlayer.googlemutant": "^0.13.5",
         "leaflet.markercluster": "^1.5.3",
+        "mgrs": "^1.0.0",
         "milsymbol": "^2.2.0",
         "mkdirp": "^3.0.1",
         "mysql2": "^3.11.3",
+        "proj4": "^2.8.1",
         "proj4": "^2.12.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
