--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,25 @@ ENV/
 
 # Dependencias de Node.js
 node_modules/
+# EXCEPCIÓN: Incluir librerías críticas para producción
+!node_modules/milsymbol/
+!node_modules/leaflet-control-geocoder/
+!node_modules/leaflet/
+!node_modules/leaflet-draw/
+!node_modules/leaflet-fullscreen/
+!node_modules/leaflet-sidebar-v2/
+!node_modules/leaflet-measure/
+!node_modules/leaflet-easybutton/
+!node_modules/leaflet-geometryutil/
+!node_modules/leaflet-geosearch/
+!node_modules/leaflet.markercluster/
+!node_modules/d3/
+!node_modules/geotiff/
+!node_modules/html2canvas/
+!node_modules/file-saver/
+!node_modules/proj4/
+!node_modules/mgrs/
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
