--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 bcrypt==4.2.0
 gunicorn==21.2.0
+requests==2.32.3
 
 # Dependencias core (reducidas)
 flask-sqlalchemy==2.5.1
