🧪 REORGANIZAR TESTS + 🗂️ LEGACY + 🔍 DEBUG DB
- TestPlaneamiento: eliminar auto-ejecución
- legacy_files/: carpeta para archivos obsoletos
- Debug endpoint: /api/debug/tables para verificar DB
- Investigar problema partidas vacías

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # MAIRA Project - Gitignore organizado
 # =====================================
 
+# Archivos legacy/obsoletos
+legacy_files/
+*.backup
+*.old
+*_backup.*
+*_old.*
+
 # Archivos de Python
 __pycache__/
 *.py[cod]
