📝 Agregado backup al gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -185,4 +185,4 @@ iniciarpartida.html
 inicioGB.html
 juegodeguerra.html
 planeamiento.html
-static-index.html
+static-index.htmlbackup_maira_20250826_211318/
