🧹 LIMPIEZA STATIC: Organización de archivos de desarrollo
MOVIDOS A tools/:
- tools/static-debug/: debug_console.html, diagnostico_servidor.html,
  estado_sistema_maira.html, verificacion_post_deploy.html,
  external_tiles_adapter.js, github_releases_config.js, optimized_tiles_system.js
- tools/static-demo/: demo_minitiles.html, documentacion.html,
  template-dependency-manager.html

STATIC LIMPIO (solo archivos esenciales):
✅ index.html, iniciarpartida.html, juegodeguerra.html
✅ planeamiento.html, gestionbatalla.html, inicioGB.html, CO.html

- Actualizado .gitignore para excluir tools/static-debug y tools/static-demo
- Archivos de desarrollo ahora organizados y fuera de producción

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ legacy_files/
 *.old
 *_backup.*
 *_old.*
+backup_maira_20250826_211318/
+
+# Archivos de debug y desarrollo (no subir a producción)
+tools/static-debug/
+tools/static-demo/
 
 # Archivos de Python
 __pycache__/
@@ -185,4 +190,4 @@ iniciarpartida.html
 inicioGB.html
 juegodeguerra.html
 planeamiento.html
-static-index.htmlbackup_maira_20250826_211318/
+static-index.html
