🚀 Performance & Architecture: Mejoras críticas de sistema
UVICORN SUPPORT:
- Agregar uvicorn.conf.py para mejor performance async
- Incluir uvicorn[standard], uvloop, httptools en requirements
- Configuración optimizada para Socket.IO en tiempo real

USER IDENTITY MANAGER:
- Mejorar UserIdentity.js v2.0.0 con gestión centralizada
- Agregar getUserId(), getUserName(), isAuthenticated()
- Sistema de eventos para cambios de estado
- Compatibilidad hacia atrás con localStorage
- Exposer window.userId y window.userName globalmente

ARQUITECTURA:
- Solucionar problema de gestión inconsistente de userId
- Centralizar manejo de identidad entre todos los módulos
- Preparar migración de Gunicorn a Uvicorn para mejor rendimiento

Performance esperada: 2-3x mejor latencia en Socket.IO

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,11 @@ pymysql==1.0.2
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 bcrypt==4.2.0
+
+# Uvicorn para mejor performance con Socket.IO
+uvicorn[standard]==0.30.6
+uvloop==0.19.0
+httptools==0.6.1
 gunicorn==21.2.0
 requests==2.32.3
 
