--- a/requirements.production.txt
+++ b/requirements.production.txt
@@ -1,23 +1,16 @@
-# Dependencias principales para MAIRA
+# Dependencias mínimas para MAIRA en producción
 flask==3.0.3
 flask-socketio==5.4.1
 flask-cors==3.0.10
 python-socketio==5.11.4
 python-engineio==4.9.1
-pymysql==1.0.2
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 bcrypt==4.2.0
-
-# Uvicorn para mejor performance - versiones flexibles para compatibilidad
-uvicorn[standard]>=0.23.0,<1.0.0
-# uvloop y httptools opcionales - se instalan solo si están disponibles
-uvloop>=0.17.0,<1.0.0; platform_system != "Windows"
-httptools>=0.5.0,<1.0.0; platform_system != "Windows"
 gunicorn==21.2.0
 requests==2.32.3
 
-# Dependencias core (reducidas)
+# Dependencias core (reducidas para compatibilidad)
 flask-sqlalchemy==2.5.1
 werkzeug==3.0.4
 jinja2==3.1.4
@@ -29,3 +22,6 @@ bidict==0.23.1
 simple-websocket==1.0.0
 wsproto==1.2.0
 h11==0.14.0
+
+# Uvicorn básico (sin extensiones C problemáticas)
+uvicorn>=0.23.0,<1.0.0
