--- a/requirements.production.txt
+++ b/requirements.production.txt
@@ -1,27 +1,36 @@
-# Dependencias mínimas para MAIRA en producción
+# MAIRA - Dependencias de Producción (Render.com)
+# Configuración mínima y estable para deploy exitoso
+
+# Framework principal
 flask==3.0.3
 flask-socketio==5.4.1
 flask-cors==3.0.10
+
+# Socket.IO core
 python-socketio==5.11.4
 python-engineio==4.9.1
+
+# Base de datos
 psycopg2-binary==2.9.10
+
+# Utilidades esenciales
 python-dotenv==1.0.1
 bcrypt==4.2.0
-gunicorn==21.2.0
 requests==2.32.3
 
-# Dependencias core (reducidas para compatibilidad)
-flask-sqlalchemy==2.5.1
+# Servidor (Flask + Gunicorn funciona 100%)
+gunicorn==21.2.0
+
+# Dependencias Flask core
 werkzeug==3.0.4
 jinja2==3.1.4
 click==8.1.7
 itsdangerous==2.2.0
 markupsafe==2.1.5
 blinker==1.8.2
+
+# Socket.IO dependencies
 bidict==0.23.1
 simple-websocket==1.0.0
 wsproto==1.2.0
 h11==0.14.0
-
-# Uvicorn básico (sin extensiones C problemáticas)
-uvicorn>=0.23.0,<1.0.0
