--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Dependencias principales para MAIRA
+# MAIRA - Dependencias completas (desarrollo y producción)
 flask==3.0.3
 flask-socketio==5.4.1
 flask-cors==3.0.10
@@ -8,17 +8,10 @@ pymysql==1.0.2
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 bcrypt==4.2.0
-
-# Uvicorn para mejor performance - versiones flexibles para compatibilidad
-uvicorn[standard]>=0.23.0,<1.0.0
-# uvloop y httptools opcionales - se instalan solo si están disponibles
-uvloop>=0.17.0,<1.0.0; platform_system != "Windows"
-httptools>=0.5.0,<1.0.0; platform_system != "Windows"
 gunicorn==21.2.0
 requests==2.32.3
 
-# Dependencias core (reducidas)
-flask-sqlalchemy==2.5.1
+# Dependencias core
 werkzeug==3.0.4
 jinja2==3.1.4
 click==8.1.7
