--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "dependencies": {
         "@mapbox/corslite": "^0.0.7",
-        "@raruto/leaflet-elevation": "^2.5.1", 
+        "@raruto/leaflet-elevation": "^2.5.1",
         "@socket.io/component-emitter": "^3.1.2",
         "cors": "^2.8.5",
         "d3": "^7.8.4",
@@ -72,7 +72,9 @@
     },
     "jest": {
         "testEnvironment": "jsdom",
-        "setupFiles": ["<rootDir>/Client/js/Test/jest.setup.js"],
+        "setupFiles": [
+            "<rootDir>/Client/js/Test/jest.setup.js"
+        ],
         "moduleNameMapper": {
             "^@/(.*)$": "<rootDir>/Client/js/$1"
         },
@@ -82,11 +84,14 @@
     },
     "babel": {
         "presets": [
-            ["@babel/preset-env", {
-                "targets": {
-                    "node": "current"
+            [
+                "@babel/preset-env",
+                {
+                    "targets": {
+                        "node": "current"
+                    }
                 }
-            }]
+            ]
         ]
     },
     "keywords": [],
