--- a/.env.example
+++ b/.env.example
@@ -1,48 +1,11 @@
-# MAIRA Configuration Environment Variables - EXAMPLE
-# ===================================================
-# Copia este archivo como .env y configura tus valores
+# Variables de entorno para MAIRA
+# Copia este archivo como .env y configura los valores
 
-# Database Configuration
-# -----------------------
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=maira_db
-DB_USER=postgres
-DB_PASSWORD=tu_password_local
-
-# Flask Configuration
-# -------------------
+# Configuración de ambiente
 FLASK_ENV=development
-FLASK_DEBUG=True
-SECRET_KEY=cambia_esta_clave_secreta
+NODE_ENV=development
 
-# Server Configuration
-# --------------------
-PORT=5000
-HOST=0.0.0.0
-
-# SocketIO Configuration
-# ----------------------
-SOCKETIO_DEBUG=False
-SOCKETIO_CORS_ALLOWED_ORIGINS=*
-
-# Security
-# --------
-BCRYPT_ROUNDS=12
-
-# Application Settings
-# --------------------
-MAX_PARTIDAS=100
-MAX_JUGADORES_PARTIDA=8
-TIMEOUT_CONEXION=30
-
-# Development Settings
-# --------------------
-USE_LOCAL_DB=True
-BYPASS_AUTH=False
-ENABLE_DEBUG_LOGS=True
-
-# URLs del servidor (legacy)
+# URLs del servidor (cambiar según ambiente)
 CLIENT_URL=http://localhost:8080
 SERVER_URL=http://localhost:10000
 
