--- a/package.json
+++ b/package.json
@@ -1,53 +1,20 @@
 {
     "name": "maira",
-    "version": "3.0.0",
-    "description": "MAIRA - Sistema de Mapas Interactivos y Gestión de Batalla en Tiempo Real",
-    "main": "app.py",
-    "author": "MAIRA Development Team",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Ehr051/MAIRA.git"
-    },
-    "homepage": "https://maira-3e76.onrender.com",
-    "keywords": [
-        "maps",
-        "battle-management", 
-        "real-time",
-        "socketio",
-        "tactical-simulation",
-        "mini-tiles",
-        "argentina",
-        "leaflet",
-        "flask"
-    ],
-    "engines": {
-        "node": ">=18.0.0",
-        "npm": ">=8.0.0"
-    },
+    "version": "1.0.0",
+    "description": "Mesa de Arena Interactiva de Realidad Aumentada",
+    "main": "indexP.js",
     "scripts": {
         "start": "http-server -p 8080 -c-1 --index index.html",
         "start-py": "python3 server/server.py",
-        "start-js": "node server/node.js", 
+        "start-js": "node server/node.js",
         "start-gestos": "python3 /Users/mac/Documents/GitHub/MAIRA_git/Server/detectorGestos.py",
         "dev": "concurrently \"npm run start-py\" \"npm run start-js\" \"npm start\"",
-        "dev-https": "concurrently \"npm run start-py-https\" \"npm run start-js\"",
-        "start-py-https": "python3 server/serverhttps.py",
         "install-gesture-deps": "python3 server/install_deps.py",
-        "build": "npm run optimize:assets && npm run prepare:client",
-        "build:production": "npm run optimize:assets && npm run prepare:client && npm run minify",
+        "start-py-https": "python3 server/serverhttps.py",
+        "dev-https": "concurrently \"npm run start-py-https\" \"npm run start-js\"",
+        "build:production": "npm run optimize:assets && npm run prepare:client",
         "optimize:assets": "echo 'Optimizing assets for production...'",
-        "prepare:client": "echo 'Preparing client files for static hosting...'",
-        "minify": "echo 'Minifying JavaScript and CSS files...'",
-        "test": "npm run test:client && npm run test:integration",
-        "test:client": "echo 'Running client-side tests...'",
-        "test:integration": "python dev-tools/test_runner_local.py",
-        "test:urls": "python scripts/test_urls.py",
-        "lint": "eslint Client/js/**/*.js",
-        "lint:fix": "eslint Client/js/**/*.js --fix",
-        "clean": "rm -rf node_modules/.cache && rm -rf dist/",
-        "deploy": "git push origin main",
-        "health-check": "curl -f https://maira-3e76.onrender.com/health || exit 1"
+        "prepare:client": "echo 'Preparing client files for static hosting...'"
     },
     "dependencies": {
         "@mapbox/corslite": "^0.0.7",
