--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# MAIRA - Dependencias completas (desarrollo y producción)
+# Dependencias principales para MAIRA
 flask==3.0.3
 flask-socketio==5.4.1
 flask-cors==3.0.10
@@ -11,7 +11,8 @@ bcrypt==4.2.0
 gunicorn==21.2.0
 requests==2.32.3
 
-# Dependencias core
+# Dependencias core (reducidas)
+flask-sqlalchemy==2.5.1
 werkzeug==3.0.4
 jinja2==3.1.4
 click==8.1.7
