🧹 Limpieza del repositorio - Archivos de desarrollo organizados
✅ REORGANIZACIÓN COMPLETADA:
- Archivos de testing movidos a development/testing/
- Scripts de debugging movidos a development/debugging/
- Informes de auditoría movidos a development/reports/
- Scripts temporales movidos a development/scripts/
- Herramientas dev movidas a development/tools/

✅ .gitignore ACTUALIZADO:
- Excluye workspace development/ del repo
- Patrones para archivos de testing temporales
- Exclusiones para scripts de desarrollo
- Protección de archivos HTML esenciales mantenida

✅ REPOSITORIO LIMPIO:
- Solo archivos de producción en el repo principal
- Herramientas de desarrollo accesibles localmente
- Listo para deployment en Render.com

📁 Archivos esenciales preservados:
- static/*.html (todos los módulos)
- app.py (servidor principal)
- Client/js/ (lógica del frontend)
- requirements.txt, package.json, etc.

--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,35 @@ app_complete.py
 # juegodeguerra.html - ESENCIAL: NO EXCLUIR
 # planeamiento.html - ESENCIAL: NO EXCLUIR
 static-index.html
+# =====================================
+# WORKSPACE DE DESARROLLO LOCAL
+# =====================================
+development/
+
+# Scripts de desarrollo y testing
+*_debug.js
+*_test.html
+debug_*.js
+test_*.html
+diagnostico_*.html
+verificacion_*.js
+auditoria_*.js
+
+# Informes temporales  
+INFORME_*.md
+ANALISIS_*.md
+PLAN_*.md
+
+# Scripts temporales
+prepare_*.py
+setup_*.sh
+convert_*.py
+clean_*.py
+monitor_*.sh
+backup_*.sh
+crear_backup_*.sh
+verificar_*.py
+
+# Archivos de configuración temporal
+uvicorn.conf.py
+render-*.yaml
