feat: Rediseñar OCOTA y Pendientes - Solo elementos críticos visibles
- OCOTA: Solo pinta Terrenos Llave en dorado
  * Resto gris opacity 15% (casi invisibles)
  * Tooltip completo 5 componentes OCOTA
  * Calco: '⭐ Terrenos Llave HH:MM:SS'

- Pendientes: Solo pinta obstáculos >30° en rojo
  * Resto gris opacity 15%
  * Tooltip: grados + clasificación + es obstáculo
  * Calco: '⚠️ Obstáculos Pendiente HH:MM:SS'

Usuario: 'OCOTA no se entiende', 'Pendientes tampoco se entiende la pintada'
Estrategia: Visual minimalista + Info completa tooltips

--- a/MAIRA-4.0/.gitignore
+++ b/MAIRA-4.0/.gitignore
@@ -262,3 +262,8 @@ docs/MINI_TILES_SUCCESS.md
 # Archivos de configuración temporal
 uvicorn.conf.py
 # render-*.yaml  # Comentado: render.yaml es necesario para deployment
+# Archivos grandes de ingeniería inversa BV8
+tools/reverse_engineering/bv8_extracted/product.cab
+tools/reverse_engineering/bv8_server_extracted/product.cab
+*.cab
+
