feat: Sistema de tiles GIS on-demand para capas del IGN
Implementación completa de sistema de carga selectiva de capas GIS:

🎯 Características principales:
- División espacial en tiles de 0.5° × 0.5° (~55km × 55km)
- Grilla 40×67 = 5,357 tiles con datos (tiles vacíos omitidos)
- Carga on-demand según bounds del área de operaciones
- Master index con metadata completa por tile

📦 Estructura implementada:
- tools/create_gis_tiles.py: Script división tiles espaciales
- tools/convert_shapefiles_to_geojson.py: Conversión Shapefile→GeoJSON
- tools/descargar_capas_ign.sh: Script descarga capas IGN
- docs/URLS_DESCARGA_CAPAS_IGN.md: Documentación fuentes datos
- gis_tiles_master_index.json: Metadata 5,357 tiles (240 KB)

🌐 Endpoint backend:
- POST /api/capas_gis/consultar
- Request: {bounds: {...}, capas: [...]}
- Response: FeatureCollections filtradas por área
- Carga solo tiles relevantes (10-20 tiles típicos vs 133 MB completos)

📊 Capas soportadas:
- Transporte: rutas nacionales, provinciales, caminos (87 MB tiles)
- Hidrografía: cursos/espejos agua permanente (97 MB tiles)
- Áreas urbanas: localidades (3.8 MB tiles)
- Total: 177,927 features divididos en 5,357 archivos

🔧 Performance esperada:
- Área típica: ~100-200ms (10-20 tiles de 5-30 KB c/u)
- vs cargar país completo: 133 MB + procesamiento completo
- Overhead storage: +55 MB (+41%) pero permite carga selectiva

📝 Notas:
- Tiles GIS no incluidos en repo (generados localmente)
- Script create_gis_tiles.py regenera estructura completa
- Master index SÍ incluido para referencia estructura
- Requiere geopandas instalado: pip install geopandas

--- a/MAIRA-4.0/.gitignore
+++ b/MAIRA-4.0/.gitignore
@@ -267,3 +267,19 @@ tools/reverse_engineering/bv8_extracted/product.cab
 tools/reverse_engineering/bv8_server_extracted/product.cab
 *.cab
 
+
+# ====================================
+# DATOS GIS Y ARCHIVOS DESCARGADOS
+# ====================================
+# Archivos Shapefiles del IGN (descargados manualmente)
+Client/Libs/datos_argentina/*.zip
+Client/Libs/datos_argentina/IGN_Shapefiles_Extraidos/
+
+# GeoJSON grandes (generados por script)
+Client/Libs/datos_argentina/*_GeoJSON/
+
+# Tiles GIS (generados por script)
+Client/Libs/datos_argentina/*_Tiles/
+
+# IMPORTANTE: El master index SÍ se incluye en el repo
+# Client/Libs/datos_argentina/gis_tiles_master_index.json
